# sccs

./: .gitignore  .pre-commit-config.yaml  .project-tips  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
sccs/: __init__.py  __main__.py  cli.py  cli_memory.py  command.py  config.py  config_sync.py  diff.py  git.py  logger.py  skill.py  state.py  sync_engine.py  user_config.py
sccs/config/: __init__.py  defaults.py  loader.py  migration.py  schema.py
sccs/convert/: __init__.py  fish_to_pwsh.py  rules.py  templates.py
sccs/docs/: __init__.py  generator.py
sccs/git/: __init__.py  operations.py  resolve.py
sccs/integrations/: __init__.py  antigravity.py  claude_desktop.py  detectors.py
sccs/memory/: __init__.py  api.py  bridge.py  filter.py  item.py  manager.py
sccs/output/: __init__.py  console.py  diff.py  merge.py
sccs/sync/: __init__.py  actions.py  category.py  engine.py  item.py  settings.py  state.py
sccs/transfer/: __init__.py  exporter.py  importer.py  manifest.py  ui.py
sccs/utils/: __init__.py  hashing.py  logging.py  paths.py  platform.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_memory.py  test_config.py  test_conflict_resolution.py  test_console.py  test_convert.py  test_diff.py  test_docs.py  test_git_operations.py  test_git_resolve.py  test_hashing.py  test_importer_security.py  test_integrations.py  test_memory.py  test_merge.py  test_migration.py  test_paths_atomic.py  test_paths_security.py  test_platform.py  test_platform_utils.py  test_settings.py  test_sync.py  test_transfer.py
